<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myFitnessMeals</string>

    <string name="main_tab_dashboard">Dashboard</string>
    <string name="main_tab_meal">Meal</string>
    <string name="main_tab_history">Storico</string>
    <string name="main_tab_settings">Settings</string>

    <string name="exit_dialog_title">Exit app</string>
    <string name="exit_dialog_message">Do you want to close MyFitnessMeals?</string>
...
